bugfix: disable autocomplete on mobile in the filter field

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-size: 2.0rem;
+  font-size: 2.5rem;
 }
 
 body {
@@ -68,6 +68,7 @@ h1 {
 
 textarea {
   font-family: "Fira Code", monospace;
+  font-size: inherit;
   border: none;
   border-radius: .3em;
   padding: .5em;
@@ -128,7 +129,16 @@ textarea {
 }
 
 input[type=checkbox] {
-  transform: scale(1.3);
+  transform: scale(2.5);
+  height: 2.5em;
+}
+
+@media only screen and (min-width: 1000px) {
+  /* For Desktops */
+  input[type=checkbox] {
+    transform: scale(1.3);
+    height: 1em;
+  }
 }
 
 #input {
